# ssh-client

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/auth/: auth_manager.py
src/config/: config.py
src/crypto/: crypto_manager.py
src/network/: packet_manager.py  socket_handler.py  version_exchange.py
src/session/: session_manager.py
src/tests/: test_packet_manager.py  test_socket_handler.py  test_version_exchange.py
src/utils/: logger.py
